# russian-words-frequency

./: .gitignore  README.md
docs/: index.html
docs/assets/: index-AbB2caQM.js  index-BHvx1s62.js  index-BSz5wpXJ.js  index-Df8n0JqV.css  index-DjZ-Zx2f.js
research/: 03-download-ru-datasets.ipynb  05-process-words.ipynb  06-assemble-csv-results.ipynb  06-benchmark-word-normalization.ipynb  07-final-word-process-pipeline.ipynb  08-assemble-csv-results.ipynb  pyproject.toml
webapp/static/: index.html  package-lock.json  package.json  vite.config.ts
webapp/static/src/: App.tsx
webapp/static/src/data/: words.ts
